// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-disclosure-button-legacy #render should render component as expected (1) 1`] = `"<gux-disclosure-button-legacy lang="en" hydrated=""></gux-disclosure-button-legacy>"`;

exports[`gux-disclosure-button-legacy #render should render component as expected (1) 2`] = `
<div class="gux-disclosure-button-container gux-left">
  <button aria-controls="gux-disclosure-button-panel-i" aria-expanded="false" aria-label="Disclosure button" class="gux-disclosure-button">
    <gux-icon hydrated="" icon-name="arrow-solid-right" size="inherit"></gux-icon>
  </button>
  <div class="gux-disclosure-panel" id="gux-disclosure-button-panel-i" role="region">
    <slot name="panel-content"></slot>
  </div>
</div>
`;

exports[`gux-disclosure-button-legacy #render should render component as expected (2) 1`] = `"<gux-disclosure-button-legacy lang="en" is-open="" hydrated=""></gux-disclosure-button-legacy>"`;

exports[`gux-disclosure-button-legacy #render should render component as expected (2) 2`] = `
<div class="gux-disclosure-button-container gux-left">
  <button aria-controls="gux-disclosure-button-panel-i" aria-expanded="true" aria-label="Disclosure button" class="gux-disclosure-button">
    <gux-icon hydrated="" icon-name="arrow-solid-left" size="inherit"></gux-icon>
  </button>
  <div class="gux-active gux-disclosure-panel" id="gux-disclosure-button-panel-i" role="region">
    <slot name="panel-content"></slot>
  </div>
</div>
`;

exports[`gux-disclosure-button-legacy #render should render component as expected (3) 1`] = `"<gux-disclosure-button-legacy lang="en" position="left" hydrated=""></gux-disclosure-button-legacy>"`;

exports[`gux-disclosure-button-legacy #render should render component as expected (3) 2`] = `
<div class="gux-disclosure-button-container gux-left">
  <button aria-controls="gux-disclosure-button-panel-i" aria-expanded="false" aria-label="Disclosure button" class="gux-disclosure-button">
    <gux-icon hydrated="" icon-name="arrow-solid-right" size="inherit"></gux-icon>
  </button>
  <div class="gux-disclosure-panel" id="gux-disclosure-button-panel-i" role="region">
    <slot name="panel-content"></slot>
  </div>
</div>
`;

exports[`gux-disclosure-button-legacy #render should render component as expected (4) 1`] = `"<gux-disclosure-button-legacy lang="en" is-open="" position="left" hydrated=""></gux-disclosure-button-legacy>"`;

exports[`gux-disclosure-button-legacy #render should render component as expected (4) 2`] = `
<div class="gux-disclosure-button-container gux-left">
  <button aria-controls="gux-disclosure-button-panel-i" aria-expanded="true" aria-label="Disclosure button" class="gux-disclosure-button">
    <gux-icon hydrated="" icon-name="arrow-solid-left" size="inherit"></gux-icon>
  </button>
  <div class="gux-active gux-disclosure-panel" id="gux-disclosure-button-panel-i" role="region">
    <slot name="panel-content"></slot>
  </div>
</div>
`;

exports[`gux-disclosure-button-legacy #render should render component as expected (5) 1`] = `"<gux-disclosure-button-legacy lang="en" position="right" hydrated=""></gux-disclosure-button-legacy>"`;

exports[`gux-disclosure-button-legacy #render should render component as expected (5) 2`] = `
<div class="gux-disclosure-button-container gux-right">
  <button aria-controls="gux-disclosure-button-panel-i" aria-expanded="false" aria-label="Disclosure button" class="gux-disclosure-button">
    <gux-icon hydrated="" icon-name="arrow-solid-left" size="inherit"></gux-icon>
  </button>
  <div class="gux-disclosure-panel" id="gux-disclosure-button-panel-i" role="region">
    <slot name="panel-content"></slot>
  </div>
</div>
`;

exports[`gux-disclosure-button-legacy #render should render component as expected (6) 1`] = `"<gux-disclosure-button-legacy lang="en" is-open="" position="right" hydrated=""></gux-disclosure-button-legacy>"`;

exports[`gux-disclosure-button-legacy #render should render component as expected (6) 2`] = `
<div class="gux-disclosure-button-container gux-right">
  <button aria-controls="gux-disclosure-button-panel-i" aria-expanded="true" aria-label="Disclosure button" class="gux-disclosure-button">
    <gux-icon hydrated="" icon-name="arrow-solid-right" size="inherit"></gux-icon>
  </button>
  <div class="gux-active gux-disclosure-panel" id="gux-disclosure-button-panel-i" role="region">
    <slot name="panel-content"></slot>
  </div>
</div>
`;

exports[`gux-disclosure-button-legacy #render should render component as expected (7) 1`] = `"<gux-disclosure-button-legacy lang="en" label="More Info" hydrated=""></gux-disclosure-button-legacy>"`;

exports[`gux-disclosure-button-legacy #render should render component as expected (7) 2`] = `
<div class="gux-disclosure-button-container gux-left">
  <button aria-controls="gux-disclosure-button-panel-i" aria-expanded="false" aria-label="More Info" class="gux-disclosure-button">
    <gux-icon hydrated="" icon-name="arrow-solid-right" size="inherit"></gux-icon>
  </button>
  <div class="gux-disclosure-panel" id="gux-disclosure-button-panel-i" role="region">
    <slot name="panel-content"></slot>
  </div>
</div>
`;
